main: Set session env vars to make non gtk+ apps work with IBus

If we are compiled with IBus support and the current session isn't
fallback then we always set the QT_IM_MODULE and XMODIFIERS
environment variables so that Qt and XIM supporting applications work
as best as possible.

https://bugzilla.gnome.org/show_bug.cgi?id=680313